Fixed: text alignment is wrong on iPhone on 404 page

--- a/css/common.css
+++ b/css/common.css
@@ -92,4 +92,9 @@ body
         height: 40px;
         padding: 12pt;
     }
+
+    .main-copy
+    {
+        padding: 32pt 12pt 12pt 12pt;
+    }
 }
